--- a/index.html
+++ b/index.html
@@ -2,90 +2,249 @@
 
 <head>
     <meta charset="utf-8">
-    <title>About Us</title>
+    <title>Learning Ducks</title>
     <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <style>
+        body {
+            background-color: #e0e0e0;
+        }
+
+        p {
+            font-size: larger;
+        }
+
+        footer {
+            color: #ffffff;
+            background-color: #008080;
+        }
+
+        footer div {
+            text-align: center;
+        }
+
+        .larger {
+            font-size: larger;
+        }
+
+        .link {
+            color: #ffffff;
+        }
+
+        .link:hover {
+            color: #ffffff;
+        }
+
+        .link:active {
+            color: #ffffff;
+        }
+    </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-inverse" role="navigation">
+    <nav class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
             <div class="navbar-header navbar-form">
-                <a class="navbar-brand" href="#">About Us</a>
+                <a class="navbar-brand">Learning Ducks</a>
             </div>
             <div>
                 <ul class="nav navbar-nav navbar-form navbar-right">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">GitHub</a></li>
+                    <li class="active"><a class="larger" href="#"><span class="glyphicon glyphicon-home"></span>&nbsp;&nbsp;Home</a></li>
+                    <!-- <li ><a href="aboutus.html"><span class="glyphicon glyphicon-user"></span>&nbsp;&nbsp;CVs</a></li> -->
+                    <li><a class="larger" href="https://github.com/LearningDucks"><span class="glyphicon glyphicon-star"></span>&nbsp;&nbsp;GitHub</a></li>
                 </ul>
             </div>
         </div>
     </nav>
     <div class="container">
         <div class="row">
-            <div class="page-header">
-                <h1 class="text-center">Our CVs</h1>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="jumbotron">
+                    <div class="container">
+                        <h1 class="text-center">About us</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <section>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                                <img src="images/charles.jpg" class="img-responsive img-circle" alt="Charles">
+                            </div>
+                            <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+                                <div class="page-header">
+                                    <h1>Charles <small>Project Manager</small></h1>
+                                </div>
+                                <p><strong>Personal Goals and Interests:<br/></strong>
+                                    Pursuing the better cooperation ability<br/>
+                                    Pursuing a more realistic project environment</p>
+                                <p><strong>Skills or Experience:<br/></strong>
+                                    <em>Languages: C/C++</em><br/>
+                                    <em>Plantform: Windows</em><br/>
+                                    Well, PM is a great position which I really appreciate to get the opportunity to be a “PM”.
+                                    Also, I’m looking forward to the coming cooperation, and I’ll be glad to work with you.
+                                    I’ve participated in some competition as a team leader, ICM, for example.
+                                    So, as a PM, I will try my best to do my job in the team.</p>
+                                <p><strong>Detailed CV:</strong> <a class="larger" href="cvs/charles.pdf">Charles.pdf</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+            <div class="clearfix" style="margin-bottom: 30px;"></div>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <section>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+                                <div class="page-header">
+                                    <h1>Zheng <small>Requirements Analyst</small></h1>
+                                </div>
+                                <p><strong>Personal Goals and Interests:<br/></strong>
+                                    Accumulate development experience</p>
+                                <p><strong>Skills or Experience:<br/></strong>
+                                    <em>Languages: C/C++</em><br/>
+                                    <em>Plantform: Windows</em><br/>
+                                    <ol >
+                                        <li><p>Working with other people in American University Mathematical Modeling Competition in 2018</p></li>
+                                        <li><p>Working with other people in National College Students Mathematical Modeling Competition in 2018</p></li>
+                                        <li><p>Project Leader: Innovation and entrepreneurship training program for College Students(Writing Software Copyright Instructions, a SCI paper contributed）</p></li>
+                                    </ol>
+                                </p>
+                                <p><strong>Detailed CV:</strong> <a class="larger" href="cvs/zheng.pdf">Zheng.pdf</a></p>
+                            </div>
+                            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                                <img src="images/zheng.jpg" class="img-responsive img-circle" alt="Zheng">
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+            <div class="clearfix" style="margin-bottom: 30px;"></div>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <section>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                                <img src="images/zhanghu.jpg" class="img-responsive img-circle" alt="ZhangHu">
+                            </div>
+                            <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+                                <div class="page-header">
+                                    <h1>ZhangHu <small>System Architect</small></h1>
+                                </div>
+                                <p><strong>Personal Goals and Interests:<br/></strong>
+                                    Goals: Achieve the course wonderfully<br/>
+                                    Interests: Programming, Watching movies, Tennis, Sleeping</p>
+                                <p><strong>Skills or Experience:<br/></strong>
+                                    <em>Languages: C++/Java</em><br/>
+                                    <em>Plantform: Windows/Android</em><br/></p>
+                                <p><strong>Detailed CV:</strong> <a class="larger" href="cvs/zhanghu.pdf">ZhangHu.pdf</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+            <div class="clearfix" style="margin-bottom: 30px;"></div>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <section>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+                                <div class="page-header">
+                                    <h1>Alex <small>Developer</small></h1>
+                                </div>
+                                <p><strong>Personal Goals and Interests:<br/></strong>
+                                    I hope to improve my teamwork ability. And I want to transform what I have learned into actual code through project experience.</p>
+                                <p><strong>Skills or Experience:<br/></strong>
+                                    <em>Languages: C/C++/Java</em><br/>
+                                    <em>Plantform: Windows/Android</em><br/>
+                                    I have participated in programming contests, which has greatly improved my coding ability.</p>
+                                <p><strong>Detailed CV:</strong> <a class="larger" href="cvs/alex.pdf">Alex.pdf</a></p>
+                            </div>
+                            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                                <img src="images/alex.jpg" class="img-responsive img-circle" alt="Alex">
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+            <div class="clearfix" style="margin-bottom: 30px;"></div>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <section>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                                <img src="images/jet.jpg" class="img-responsive img-circle" alt="Jet">
+                            </div>
+                            <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
+                                <div class="page-header">
+                                    <h1>Jet <small>Tester</small></h1>
+                                </div>
+                                <p><strong>Personal Goals and Interests:<br/></strong>
+                                    I am crazy about testing the software for problems as a tester. You can also call me the bug doctor.<br/>
+                                    OK. Talk is cheap. Please Show me the code.</p>
+                                <p><strong>Skills or Experience:<br/></strong>
+                                    <em>Languages: C/C++</em><br/>
+                                    <em>Plantform: Windows</em><br/>
+                                    I enjoy cooperating with my teammate. All of us have different personal skills. As for me, I am good at planning and glad to assist the PM to push forward the project.
+                                    Besides, I have several project experience, such as the Bank Payment System I did during the winter vacation.</p>
+                                <p><strong>Detailed CV:</strong> <a class="larger" href="cvs/jet.pdf">Jet.pdf</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </div>
         </div>
+        <!-- <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="jumbotron">
+                    <div class="container">
+                        <h1 class="text-center">Model selection</h1>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+        <div class="clearfix" style="margin-bottom: 100px;"></div>
         <div class="row">
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2">
-                <div class="media">
-                    <a class="pull-left" href="cvs/alex.pdf">
-                        <img class="media-object img-responsive img-circle" src="images/alex.jpg" alt="Alex">
-                    </a>
-                    <div class="media-body">
-                        <h4 class="media-heading">Alex</h4>
-                        <p>Talk is cheap. Show me the code.</p>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="jumbotron">
+                    <div class="container">
+                        <div class="page-header">
+                          <h1 class="text-center">Gantt <small>Lastest Update 3/21/2019</small></h1>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2">
-                <div class="media">
-                    <a class="pull-left" href="cvs/charles.pdf">
-                        <img class="media-object img-responsive img-circle" src="images/charles.jpg" alt="Charles">
-                    </a>
-                    <div class="media-body">
-                        <h4 class="media-heading">Charles</h4>
-                        <p>Talk is cheap. Show me the code.</p>
-                    </div>
-                </div>
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <img src="images/gantt.jpg" class="img-responsive" alt="Gantt">
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2">
-                <div class="media">
-                    <a class="pull-left" href="cvs/jet.pdf">
-                        <img class="media-object img-responsive img-circle" src="images/jet.jpg" alt="Jet">
-                    </a>
-                    <div class="media-body">
-                        <h4 class="media-heading">Jet</h4>
-                        <p>Talk is cheap. Show me the code.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2">
-                <div class="media">
-                    <a class="pull-left" href="cvs/zhanghu.pdf">
-                        <img class="media-object img-responsive img-circle" src="images/zhanghu.jpg" alt="ZhangHu">
-                    </a>
-                    <div class="media-body">
-                        <h4 class="media-heading">ZhangHu</h4>
-                        <p>Talk is cheap. Show me the code.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-2">
-                <div class="media">
-                    <a class="pull-left" href="cvs/zheng.pdf">
-                        <img class="media-object img-responsive img-circle" src="images/zheng.jpg" alt="Zheng">
-                    </a>
-                    <div class="media-body">
-                        <h4 class="media-heading">Zheng</h4>
-                        <p>Talk is cheap. Show me the code.</p>
-                    </div>
-                </div>
-            </div>
+
         </div>
     </div>
+    <div class="clearfix" style="margin-bottom: 30px;"></div>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                    <h2>Contact us</h2>
+                    <ul class="list-unstyled">
+                        <li><h4><span class="glyphicon glyphicon-phone"></span> TEL: +8612345678910</h4></li>
+                        <li><h4><span class="glyphicon glyphicon-envelope"></span> Email: LearningDuck@outlook.com</h4></li>
+                        <li><h4><span class="glyphicon glyphicon-home"></span> Address: No.2699 Qianjin Street, Changchun City, China.</h4></li>
+                    </ul>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                    <h2>Links</h2>
+                    <ul class="list-unstyled">
+                        <li><h4><a class="link" href="https://getbootstrap.com/">Bootstrap</a></h4></li>
+                        <li><h4><a class="link" href="https://jquery.com/">jQuery</a></h4></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
